--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ footer {
 
 
 
-/*!-----PESTAÑA FOTOGRAFOS-LOCUTORES-----*/
+/*!------PESTAÑA FOTOGRAFOS-LOCUTORES------*/
 
 
 .fotografos-locutores { /*!-----CAJA-----*/
