--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     
     
     
-    /*!-----FORMATO CONTENEDOR----*/
+    /*!-----FORMATO CONTENEDOR-----*/
 
 .grid-contenedor {
     display: grid;
